RA-286 fix 2 failures by plugging back Lucene subsystem (workarounds ACE-3430)